# hitman-desktop

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: useExportData.js  useImportData.js  useServerRequest.js  useTearDownHander.js
src/components/history-card/: HistoryCard.jsx  history-card.scss
src/components/http-headers/: HttpHeaders.jsx  http-headers.scss
src/components/http-option/: HttpOption.jsx  http-option.scss
src/components/input/: UrlInput.jsx  index.js  input.scss
src/components/navbar/: Navbar.jsx  navbar.scss
src/components/navbar-button/: NavbarButton.jsx  navbar-button.scss
src/components/query-params/: QueryParams.jsx  query-params.scss
src/components/side-navbar/: SideNavbar.jsx  side-navbar.scss
src/components/side-panel/: SidePanel.jsx  side-panel.scss
src/db/: useHistory.js  useProfile.js  useProject.js  useRequest.js  useSettings.js
src/pages/home/: Home.jsx  home.scss
src/pages/home/history/: Histories.jsx  History.jsx  HistoryToolbar.jsx  histories.scss
src/pages/home/http-request-panel/: HttpRequestPanel.jsx
src/pages/home/profile/: ProfileCard.jsx  ProfileToolbar.jsx  Profiles.jsx  profile.scss
src/pages/home/profile-list/: ProfileList.jsx
src/pages/home/profile-panel/: EditableCell.jsx  EditableRow.jsx  ProfilePanel.jsx  profile-panel.scss
src/util/: body-util.js  header-util.js  url-util.js
(+14 files in other folders)
