[package]
name = "hitman"
version = "0.0.1"
description = "A Tauri App"
authors = ["Anshad Mohamed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "^0.4"
tauri-plugin-dialog = "2.0.0-beta.10"
tauri-plugin-http = "2.0.0-beta.11"
tauri-plugin-fs = "2.0.0-beta.10"
tauri-plugin-log = { version = "2.0.0-beta.7", features = ["colored"] }
tauri-plugin-notification = "2.0.0-beta.9"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.9"

